kubernetes/talos/deploy/maintainerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
spec:
  ports:
    - name: http
      port: 6246
      protocol: TCP
      targetPort: http
  selector:
    app: maintainerr
    release: maintainerr
  type: ClusterIP
