kubernetes/talos/deploy/maintainerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerr
spec:
  ingressClassName: internal
  rules:
  - host: maintainerr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: maintainerr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
